tests/derive_ui/rename_all_wrong_casing.stderr
error: unsupported casing: `fail`
  --> tests/derive_ui/rename_all_wrong_casing.rs:12:40
   |
12 | #[command(name = "basic", rename_all = "fail")]
   |                                        ^^^^^^
